fix input issue on mobile

--- a/src/styles/pages/services.scss
+++ b/src/styles/pages/services.scss
@@ -97,11 +97,14 @@
 
             input,
             textarea {
-                border: none;
+                border: 0;
+                border-radius: 0;
+                // border: transparent;
                 box-sizing: border-box;
                 border-bottom: 1px solid $white;
                 background: transparent;
                 outline: none;
+                box-shadow: none;
                 text-align: left;
                 // text-indent: 20px;
                 font-size: 14.5px;
